# i3-socket-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
